@@ -6,7 +6,7 @@
 
 	<groupId>net.tokyolancer.memory</groupId>
 	<artifactId>lancer</artifactId>
-	<version>1.1</version>
+	<version>1.2-beta</version>
 
 	<properties>
 		<maven.compiler.source>24</maven.compiler.source>
@@ -28,6 +28,16 @@
 			<version>1.11</version>
 			<optional>true</optional>
 			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.11.3</version>
+		</dependency>
+		<dependency>
+			<groupId>org.junit.platform</groupId>
+			<artifactId>junit-platform-engine</artifactId>
+			<version>1.11.3</version>
 		</dependency>
 	</dependencies>
 
@@ -76,21 +86,8 @@
 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.6.1</version>
-					<executions>
-						<execution>
-							<id>copy-libs</id>
-							<phase>package</phase>
-							<goals>
-								<goal>copy-dependencies</goal>
-							</goals>
-							<configuration>
-								<outputDirectory>${project.build.outputDirectory}</outputDirectory>
-								<excludeScope>provided</excludeScope>
-							</configuration>
-						</execution>
-					</executions>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>3.5.2</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -99,9 +96,14 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>24</source>
-					<target>24</target>
 					<compilerArgs>--enable-preview</compilerArgs>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<configuration>
+					<argLine>--enable-native-access=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
